// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HelpCenterEditModalHeader /> should display the component correctly - with the category selector: with the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Free article (EN)
      </span>
      <div
        class="headerControls"
      >
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="close edit modal"
          class="controlButton"
          type="button"
        >
          <i
            class="material-icons"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="categorySelect"
    >
      <div>
        <div
          class="dropdown"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="select noCategory"
            data-toggle="dropdown"
          >
            <div
              class="select dropdown-toggle selectFullWidth"
            >
              <span
                class="label"
                style="min-width: 10px; opacity: 1;"
              >
                - No category -
              </span>
              <input
                autocomplete="chrome-off"
                class="input"
                style="min-width: 10px;"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            aria-hidden="true"
            class="options optionsFullWidth dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            
            <button
              class="option option--focused dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                Orders
              </span>
            </button>
            <button
              class="option dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span>
                Pricing
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should display the component correctly - without the category selector: without the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Free article (EN)
      </span>
      <div
        class="headerControls"
      >
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="close edit modal"
          class="controlButton"
          type="button"
        >
          <i
            class="material-icons"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should render a preview article button 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Free article (EN)
      </span>
      <div
        class="headerControls"
      >
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="preview article"
          class="controlButton"
          type="button"
        >
          <i
            class="material-icons"
          >
            open_in_new
          </i>
        </button>
        <button
          aria-label="close edit modal"
          class="controlButton"
          type="button"
        >
          <i
            class="material-icons"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should render an input when onEditTitle is defined 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <input
        class="titleInput"
        maxlength="250"
        placeholder="Title"
        type="text"
        value="Free article (EN)"
      />
      <div
        class="headerControls"
      >
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="close edit modal"
          class="controlButton"
          type="button"
        >
          <i
            class="material-icons"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
  </header>
</div>
`;
